--- a/manifest.json
+++ b/manifest.json
@@ -8,21 +8,21 @@
   "theme_color": "#111827",
   "icons": [
     {
-      "src": "icons/icon-180.png",
+      "src": "img/icon-180.png",
       "sizes": "180x180",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-192.png",
+      "src": "img/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "img/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ]
 }
